// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormGoupPseudo Snapshot capturing Snapshot of FormGoupPseudo 1`] = `
<div
  className="form-group"
>
  <label
    className=""
    htmlFor="pseudo"
  >
    le super label
  </label>
  <div
    className="input-group"
  >
    <input
      className="form-control "
      id="pseudo"
      name="pseudo"
      onChange={[Function]}
      required={true}
      type="text"
      value=""
    />
    
    <div
      className="invalid-feedback"
    >
      Ce pseudo existe déjà
    </div>
  </div>
</div>
`;

exports[`FormGoupPseudo Snapshot capturing Snapshot of FormGoupPseudo with pseudo 1`] = `
<div
  className="form-group"
>
  <label
    className=""
    htmlFor="pseudo"
  >
    le super label
  </label>
  <div
    className="input-group"
  >
    <input
      className="form-control "
      id="pseudo"
      name="pseudo"
      onChange={[Function]}
      required={true}
      type="text"
      value="bob"
    />
    <div
      className="input-group-append"
    >
      <span
        className="input-group-text"
      >
        <span>
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-check fa-w-16 "
            color="green"
            data-icon="check"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      className="invalid-feedback"
    >
      Ce pseudo existe déjà
    </div>
  </div>
</div>
`;
